# AIMLbling-about

./: .copier-answers.yaml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .ruff.toml  .rumdl.toml  .typos.toml  AGENTS.md  Dockerfile  README.md  Taskfile.yaml  flake.nix  justfile  pyproject.toml
.github/: copilot-instructions.md  renovate.json5
.github/actions/build-image-action/: action.yaml
.github/agents/: plan.agent.md  test.agent.md
.github/prompts/: proof.prompt.md  refine.prompt.md  test.prompt.md
.github/workflows/: link-check.yaml  publish.yaml  renovate.yaml  search-test.yaml  update-treadmill.yaml
.taskfiles/hugo/: justfile  taskfile.yaml
.taskfiles/jupyter/: justfile  taskfile.yaml
archetypes/: blog.md
config/_default/: markup.yaml  menus.en.yaml  params.yaml
content/: _index.md
content/about/: index.md
content/blog/: _index.md
content/blog/ai-is-the-new-hotness/: index.md  power_emissions.csv
content/blog/copyright-and-licensing-in-genai-times/: index.md
content/blog/for-some-definition-of-open/: index.md
content/blog/genai-breaks-the-internet/: index.md
docker/: Dockerfile
docs/: colima.md  containerize.md  giscus.md  nix.md
experiments/: .gitignore  AGENTS.md  README.md  _index.md  justfile
experiments/aiml/: pyproject.toml
experiments/aiml/src/aiml/: __init__py  decorators.py  utils.py
experiments/bitter-lesson/: README.md  plot.py  pyproject.toml
experiments/fractals/: draw.py  pyproject.toml
experiments/language-identification/: README.md  compare_language_models.py  download_datasets.py  opensubtitles_100k.sh  pyproject.toml
experiments/language-identification/models/: __init__.py  base.py  fasttext.py  langid.py  lingua.py  papluca_roberta.py  stanza.py
experiments/parameter-estimation/: README.md  omniscience_scrape.py  param_estimation.py  pyproject.toml  rsc_fetch.py  rsc_parse.py
experiments/parameter-estimation/models/: intelligenceIndex.pkl  mmlu_pro.pkl
experiments/ragas/: 1-build_knowledgegraph.py  2-generate_testset.py  3-build_index_llamaindex.py  4-baseline_responses.py  4-rag_responses.py  4-rag_retrievals.py  5-evaluate.py  5-evaluate_baseline.py  5-evaluate_rag_responses.py  5-evaluate_rag_retrievals.py  6-analysis.py  build_dataset_langchain.py  build_index_llamaindex.py  build_knowledgegraph.py  cost analysis.ipynb  cost analysis.py  cost_analysis.ipynb  cost_analysis.py  environment.yaml  evaluate.py  generate_testset.py  pyproject.toml  requirements-after-conda.txt
experiments/ragas-experiment/: 1-build_knowledgegraph.py  2-generate_testset.py  3-build_index_llamaindex.py  4-baseline_responses.py  4-rag_responses.py  4-rag_retrievals.py  5-evaluate_baseline.py  5-evaluate_rag_responses.py  5-evaluate_rag_retrievals.py  6-analysis.py  cost_analysis.ipynb  cost_analysis.py  environment.yaml  pyproject.toml  requirements-after-conda.txt
experiments/ragas-experiment/src/: utils.py
experiments/ragas-experiment/src/ragas/: extractors.py  helpers.py
experiments/sk-rant/: environment.yaml  pyproject.toml  sk_trace.py
experiments/sk_rant/: pyproject.toml  sk_template.py  sk_trace.py
experiments/typos/: embeddings.py  part1-typo_generation.py  part1-typo_stats.py  part2-tokens.py  part3-embeddings.py  part3-typo_healing.py  part4-llm-perf.py  part5-typo_healing.py  pyproject.toml  tokens.py  typo_gen.py  typo_healing.py  typo_stats.py
experiments/typos-experiment/: environment-cuda.yaml  part1-typo_generation.py  part1-typo_stats.py  part2-tokens.py  part3-embeddings.py  part3-typo_healing.py  part4-llm-perf.py  pyproject.toml
experiments/typos-experiment/src/: damerau_levenshtein.py
experiments/typos-experiment/tests/: test_damerau_levenshtein.py
hugo/: go.mod  go.sum  justfile
hugo/archetypes/: blog.md
hugo/assets/css/: custom.css
hugo/content/: _index.md
hugo/docker/: Dockerfile  default.conf
hugo/i18n/: en.yaml
hugo/static/: browserconfig.xml  favicon-tags.html  robots.txt  site.webmanifest
layouts/blog/: wide.html
layouts/shortcodes/: table.html
scripts/: contrast.py  git_catchup_main.sh  git_rebase_main.sh  hugo_build_image.sh  hugo_new_post.sh  hugo_publish.sh  hugo_run_local.sh  with_colima.sh
site-search/: pyproject.toml
site-search/.specs/: NORTH-STAR.md
site-search/.specs/changes/archive/2026-07-15-hybrid-site-search/: design.md  proposal.md  tasks.md
site-search/.specs/changes/archive/2026-07-15-hybrid-site-search/evidence/: eval-report.md  index-build.md  published-artifact-currency.md  rollout-qa.md
site-search/.specs/changes/archive/2026-07-15-hybrid-site-search/specs/client-hybrid-search/: spec.md
site-search/.specs/changes/archive/2026-07-15-hybrid-site-search/specs/search-build-pipeline/: spec.md
site-search/.specs/changes/archive/2026-07-15-hybrid-site-search/specs/search-data-integrity/: spec.md
site-search/.specs/changes/archive/2026-07-15-hybrid-site-search/specs/search-index-artifacts/: spec.md
site-search/.specs/changes/archive/2026-07-15-hybrid-site-search/specs/search-quality-eval/: spec.md
site-search/.specs/specs/client-hybrid-search/: spec.md
site-search/.specs/specs/search-build-pipeline/: spec.md
site-search/.specs/specs/search-data-integrity/: spec.md
site-search/.specs/specs/search-index-artifacts/: spec.md
site-search/.specs/specs/search-quality-eval/: spec.md
site-search/src/site_search/: __init__.py  build_index.py  chunking.py  embedding.py  eval.py  eval_runner.js  export.py  gate.py  loader.py  quantize.py
site-search/tests/: conftest.py  test_build_index.py  test_build_pipeline.py  test_chunking.py  test_embedding.py  test_eval.py  test_eval_fixture.py  test_eval_floors.py  test_eval_live.py  test_export.py  test_gate.py  test_gitignore.py  test_parity.py  test_quantize.py  test_tokenizer_config.py
site-search/tests/fixtures/: eval-queries.json  eval-results.json  search-data.malformed.json  search-data.sample.json
site-search/tests/js/: semantic-search-parity.js
static/: BingSiteAuth.xml  robots.txt
(+113 files in other folders)
