[project]
name = "site-search"
version = "0.1.0"
description = "Build and evaluate the static semantic-search index"
requires-python = ">=3.10, <3.14"
dependencies = [
  "model2vec>=0.6",
  "numpy>=1.26",
]

[project.scripts]
build-index = "site_search.build_index:main"

[dependency-groups]
dev = ["hatchling>=1.26.3", "ruff>=0.8"]
test = ["pytest>=8.3.4", "pytest-cov>=6.0.0"]

[tool.uv]
package = true
default-groups = ["dev", "test"]
python-preference = "managed"
exclude-newer = "3 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/site_search"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --import-mode=importlib --tb=short"
pythonpath = "src"
testpaths = ["tests"]

[tool.basedpyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
reportMissingImports = "error"
reportMissingTypeStubs = false
