[project]
name = "language-detection"
version = "0.0.1"
description = ""
requires-python = ">=3.13, <3.14"
dependencies = ["aiml[dev,test,ds,plot]", "plotly>=6.0.0"]

[dependency-groups]
dev = ["aiml[dev]"]
lint = ["aiml[lint]"]
test = ["aiml[test]"]

[tool.uv.sources]
aiml = { path = "../aiml", editable = true }
