[project]
name = "language-detection"
version = "0.0.1"
description = ""
requires-python = ">=3.13, <3.14"
dependencies = [
  "aiml[dev,test,ds,plot,transformers]",
  "fasttext>=0.9.3",
  "langcodes>=3.5.0",
  "langid>=1.1.6",
  "lingua-language-detector>=2.0.2",
  "numpy<2",
  "pyarrow>=19.0.0",
  "setuptools>=75.6.0",
  "stanza>=1.10.1",
]

[dependency-groups]
dev = ["aiml[dev]"]
lint = ["aiml[lint]"]
test = ["aiml[test]"]

[tool.uv.sources]
aiml = { path = "../aiml", editable = true }
