[project]
name = "language-detection"
version = "0.0.1"
description = ""
requires-python = ">=3.10, <3.12"
dependencies = [
  "aiml[dev,test,ds,plot,transformers]",
  "fasttext>=0.9.3",
  "langcodes>=3.5.0",
  "langid>=1.1.6",
  "lingua-language-detector>=2.0.2",
  "numpy<2",
  "pyarrow>=19.0.0",
  "setuptools>=75.6.0",
  "stanza>=1.10.1",
]

[dependency-groups]
dev = ["aiml[dev]"]
lint = ["aiml[lint]"]
test = ["aiml[test]"]

[tool.uv.sources]
aiml = { path = "../aiml", editable = true }

# --- basedpyright -----------------------------------------------------------
[tool.basedpyright]
# include = ["experiments"]                                     # ["src"]
exclude = ["**/node_modules", "**/__pycache__", "**/*_cache"]
# ignore = ["src/oldstuff"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

# pythonVersion = "3.6"
# pythonPlatform = "Linux"

# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ], reportMissingImports = "warning" },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", reportPrivateUsage = false, extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]
