[project]
name = "sk-rant"
version = "0.0.1"
description = ""
requires-python = ">=3.13, <3.14"
dependencies = ["aiml[ds,plot]", "semantic-kernel>=1.17.0"]

[dependency-groups]
dev = ["aiml[dev]"]
lint = ["aiml[lint]"]
test = ["aiml[test]"]

[tool.uv.sources]
aiml = { path = "../aiml", editable = true }
